--- a/src/main/resources/templates/views/blog/blogDetailsAdmin.html
+++ b/src/main/resources/templates/views/blog/blogDetailsAdmin.html
@@ -59,6 +59,7 @@
             <!-- end of item -->
             <div class="row mt-5 text-center">
                 <div class="col-12">
+                    <a th:href="@{/blog}" class="btn btn-blueC"><i class="bi bi-arrow-left"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"> <b>Volver</b></span></a>
                     <a th:href="@{/blog/find_update/{id}/true (id=${item.id})}" class="btn btn-blue text-white"><i class="bi bi-pencil-square"></i> <span class="d-none d-sm-none d-md-none d-lg-inline d-xl-inline"><b>Actualizar</b></span></a>
                 </div>
             </div>
