--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -101,19 +101,19 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{/pets/adopt/perro}">
-                <img class="mx-auto d-block hg-blog" src="https://cdn.shopify.com/s/files/1/0583/0534/7791/files/Perro_470x.jpg?v=1673481110" alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/PerroBlog.jpg}" alt="">
                 <p class="sp-text-div"><b>PERROS</b></p>
             </a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{blog/general}">
-                <img class="mx-auto d-block hg-blog" src="/images/perrogato.jpg" alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/PerroGatoBlog.jpg}" alt="">
                 <p class="sp-text-div"><b>NOTICIAS</b></p>
             </a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{/pets/adopt/gato}">
-                <img class="mx-auto d-block hg-blog" src="https://cdn.shopify.com/s/files/1/0583/0534/7791/files/gatoo_470x.jpg?v=1674233189" alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/GatoBlog.jpg}"alt="">
                 <p class="sp-text-div"><b>GATOS</b></p>
             </a>
         </div>
