--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -1,75 +1,82 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <link rel="stylesheet" th:href="@{/css/403.css}">
-    <link rel="stylesheet" th:href="@{/css/404.css}">
     <link rel="stylesheet" th:href="@{/css/405.css}">
-    <link rel="stylesheet" th:href="@{/css/500.css}">
-    <link rel="shortcut icon" th:href="@{/images/logo.ico}" type="image/x-icon"> \
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
 </head>
 
+
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <div class="main">
-                    <div class="img">
-                        <img class="img-fluid" th:src="@{/images/wood.png}">
-                    </div>
-                    <div class="dog">
-                        <div class="dog__paws">
-                            <div class="dog__bl-leg leg">
-                                <div class="dog__bl-paw paw"></div>
-                                <div class="dog__bl-top top"></div>
-                            </div>
-                            <div class="dog__fl-leg leg">
-                                <div class="dog__fl-paw paw"></div>
-                                <div class="dog__fl-top top"></div>
-                            </div>
-                            <div class="dog__fr-leg leg">
-                                <div class="dog__fr-paw paw"></div>
-                                <div class="dog__fr-top top"></div>
-                            </div>
-                        </div>
-                        <div class="dog__body">
-                            <div class="dog__tail"></div>
-                        </div>
-                        <div class="dog__head">
-                            <div class="dog__snout">
-                                <div class="dog__nose"></div>
-                                <div class="dog__eyes">
-                                    <div class="dog__eye-l"></div>
-                                    <div class="dog__eye-r"></div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="dog__head-c">
-                            <div class="dog__ear-l"></div>
-                            <div class="dog__ear-r"></div>
-                        </div>
-                    </div>
-                </div>
+<div class="container" style="align-items: center;">
+    <div class="row align-items-center text-center">
+        <div class="col-6 error-text">
+            <h1>405</h1>
+            <p class="T1">MÉTODO NO SOPORTADO</p>
+            <p class="T2">Lo sentimos, el método utilizado no es soportado.</p>
+            <br />
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-light mx-auto" ><a th:href="'javascript:history.back()'" style="color: black;">Regresar</a></button>
             </div>
-            <div class="col">
-                <div id="message-box" class="container-fluid">
-                    <h1>Error 403</h1>
-                    <p>Vaya, parece que no tienes permiso para ir ahí.</p>
-                    <p>Puedes usar estos botones para volver con las mascotas</p>
-                    <div id="buttons-con" class="container">
-                        <div class="action-link-wrap">
-                            <a onclick="history.back(-1)" class="link-button link-back-button">Volver</a>
-                            <a th:href="@{/}" class="link-button">Inicio</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
+        </div>
+        <div class="col-md-6 d-flex justify-content-center align-items-center" >
+            <img th:src="@{/images/love-pat.gif}" class="prueba">
         </div>
     </div>
+</div>
 </body>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+    body {
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        font-family: "Quicksand";
+
+    }
+
+    h1 {
+        font-size: 200px;
+        color: #6adbd9;
+        text-align: center;
+        margin-top: 100px;
+        text-shadow: 3px 3px 0 #8f8d8d;
+    }
+
+    .btn{
+        text-align: center;
+        background-color: #6adbd9;
+        justify-items: center;
+        margin-left: 230px;
+    }
+
+    .T1 {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .T2 {
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .prueba {
+        height: 500px;
+    }
+
+</style>
+
 
 </html>
