--- a/src/main/resources/templates/error/405.html
+++ b/src/main/resources/templates/error/405.html
@@ -6,51 +6,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/405.css}">
+    <link rel="stylesheet" th:href="@{/css/404.css}">
+    <link rel="shortcut icon" th:href="@{/images/logo.ico}" type="image/x-icon">
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous"
+    />
 </head>
 
 
 <body>
-    <div class="mainbox">
-        <div class="err">4</div>
-        <div class="container">
-            <div id="cat">
-                <div id="ears">
-                    <div class="ear"></div>
-                    <div class="ear"></div>
-                </div>
-                <div id="head">
-                    <div id="eyes">
-                        <div class="eye">
-                            <div class="pupil">
-                                <div class="pupil_ref"></div>
-                            </div>
-                        </div>
-                        <div class="eye">
-                            <div class="pupil">
-                                <div class="pupil_ref"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="nose"></div>
-                    <div id="baffi_dx">
-                        <div class="baffo"></div>
-                        <div class="baffo"></div>
-                        <div class="baffo"></div>
-                    </div>
-                    <div id="baffi_sx">
-                        <div class="baffo"></div>
-                        <div class="baffo"></div>
-                        <div class="baffo"></div>
-                    </div>
-                </div>
+<div class="container" style="align-items: center;">
+    <div class="row align-items-center text-center">
+        <div class="col-6 error-text">
+            <h1>403</h1>
+            <p class="T1">PROHIBIDO</p>
+            <p class="T2">Lo sentimos, no tienes permitido ir ahí.</p>
+            <br />
+            <div class="d-flex justify-content-center">
+                <button class="btn btn-light mx-auto" ><a th:href="'javascript:history.back()'" style="color: black;">Regresar</a></button>
             </div>
+
         </div>
-        <div class="err2">5</div>
-        <div class="msg">Oh oh, nuestras patitas no han podido llevar a cabo esta acción
-            <p>Descuida,te llevaremos al <a th:href="@{/}">Inicio</a> </p>
+        <div class="col-md-6 d-flex justify-content-center align-items-center" >
+            <img th:src="@{/images/403.gif}" class="prueba">
         </div>
     </div>
+</div>
+
+
+
+
+
 </body>
+
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700;800;900&family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+    body {
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        font-family: "Quicksand";
+
+    }
+
+    h1 {
+        font-size: 200px;
+        color: #6adbd9;
+        text-align: center;
+        margin-top: 100px;
+        text-shadow: 3px 3px 0 #8f8d8d;
+    }
+
+    .btn{
+        text-align: center;
+        background-color: #6adbd9;
+        justify-items: center;
+        margin-left: 180px;
+    }
+
+    .T1 {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .T2 {
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .prueba {
+        position: relative;
+        -webkit-animation-name: example;
+        -webkit-animation-duration: 4s;
+        animation-name: example;
+        animation-duration: 20;
+        animation-iteration-count: infinite;
+        margin: 10 auto;
+        text-align: center;
+    }
+
+    @-webkit-keyframes example {
+        0% {
+            left: 0px;
+            top: 0px;
+        }
+        75% {
+            left: 50px;
+            top: 0px;
+        }
+        100% {
+            left: 0px;
+            top: 0px;
+        }
+    }
+
+    @keyframes example {
+        0% {
+            left: 0px;
+            top: 0px;
+        }
+        75% {
+            left: 50px;
+            top: 0px;
+        }
+        100% {
+            left: 0px;
+            top: 0px;
+        }
+    }
+</style>
 
 </html>
