--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -101,19 +101,19 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{/pets/adopt/perro}">
-                <img class="mx-auto d-block hg-blog" th:src="@{/images/PerroBlog.jpg}" alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/Perro_470x.png}" alt="">
                 <p class="sp-text-div"><b>PERROS</b></p>
             </a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{blog/general}">
-                <img class="mx-auto d-block hg-blog" th:src="@{/images/PerroGatoBlog.jpg}" alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/perrogato.jpg}" alt="">
                 <p class="sp-text-div"><b>NOTICIAS</b></p>
             </a>
         </div>
         <div class="col-12 col-sm-6 col-md-4 parent">
             <a class="nav-link text-white" th:href="@{/pets/adopt/gato}">
-                <img class="mx-auto d-block hg-blog" th:src="@{/images/GatoBlog.jpg}"alt="">
+                <img class="mx-auto d-block hg-blog" th:src="@{/images/gatoo_470x.png}"alt="">
                 <p class="sp-text-div"><b>GATOS</b></p>
             </a>
         </div>
